# structured-output-eval

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/assets/: architecture.html
src/soeval/: __init__.py  config.py  harness.py  providers.py  validate.py
tasks/: tasks.yaml
tests/: test_soeval.py
