[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soeval"
version = "0.1.0"
description = "Benchmark LLM structured-output reliability — valid-JSON rate, JSON-Schema adherence, and field accuracy across prompting strategies (plain → schema-in-prompt → native → strict tool), under adversarial inputs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm-evaluation", "structured-outputs", "json-schema", "function-calling", "claude", "anthropic", "reliability"]
authors = [{ name = "Taimoor Karim" }]

dependencies = ["pyyaml>=6.0", "jsonschema>=4.20"]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]
all = ["soeval[claude,dev]"]

[project.scripts]
soeval = "soeval.harness:main"

[tool.hatch.build.targets.wheel]
packages = ["src/soeval"]
